# unet_training_tool

./: .gitmodules  CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.hpp  NewTrainingProjectDialog.cpp  NewTrainingProjectDialog.hpp  OpenDatasetsDialog.cpp  OpenDatasetsDialog.hpp  ProjectFile.cpp  ProjectFile.hpp  README.md  StartTrainingDialog.cpp  StartTrainingDialog.hpp  StartValidatingDialog.cpp  StartValidatingDialog.hpp  main.cpp
